added devise and rspec

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<p><span class="notice"><%= notice %></span><span class="alert"><%= alert %></span></p>
 <%= yield %>
 
 </body>
