--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 </head>
 <body>
 <p><span class="notice"><%= notice %></span><span class="alert"><%= alert %></span></p>
+<div class="container">
 <%= yield %>
-
+</div>
 </body>
 </html>
