--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>Sign up !!!!!</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -7,10 +7,10 @@
   <%= f.email_field :email, :autofocus => true %></div>
 
   <div><%= f.label :first_name %><br />
-  <%= f.email_field :first_name, :autofocus => true %></div>
+  <%= f.text_field :first_name, :autofocus => true %></div>
 
   <div><%= f.label :last_name %><br />
-  <%= f.email_field :last_name, :autofocus => true %></div>
+  <%= f.text_field :last_name, :autofocus => true %></div>
 
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
@@ -19,8 +19,8 @@
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
-
-  <div><%= f.collection_select(:position_id, @positions, :id, :name) %></div>
+    !!!
+  <div><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
 
 
 
