--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,7 +1,8 @@
 <div class="row school-social">
   <% @schools.each do |school|%>
     <div class="col-md-4">
-      <h1><%= school.name %></h1>
+      <h1><a href="/schools/<%= school.name %>"><%= school.name %></a></h1>
+
       <ul>
         <% if school.fbUrl %>
           <li><a href="<%= school.fbUrl %>">Facebook</a></li>
