--- a/app/views/positions/editorial.html.erb
+++ b/app/views/positions/editorial.html.erb
@@ -18,13 +18,19 @@
 
 <!-- Track Navigation Bar -->
 
-<ul class="editorial-nav nav-<% @position.pages.count %>">
+<ul class="editorial-nav nav-<%= @position.pages.count %> list-inline clearfix">
 <% @position.pages.each do |page| %>
-	<a href='/editorial/<%= @position.name %>/<%= page %>'>
+	<a class="test <% if current_user.status.pages.include?(page) %> completed <% end %>" href="/editorial/<%= @position.name %>/<%= page %>">
 		<li><%= page.gsub('-',' ') %></li>
 	</a>
 <% end %>
-
+</ul>
 <!-- Body -->
-
 <%= render "positions/editorial/#{@page}" %>
+
+<form action="<%= next_page_path %>" method="post" >
+	<input type="hidden" name="track" value="editorial">
+	<input type="hidden" name="position" value="<%= @position.id %>">
+	<input type="hidden" name="page" value="<%= @page %>">
+	<button class="btn btn-primary">Next</button>
+</form>
