--- a/app/views/positions/editorial/_description.html.erb
+++ b/app/views/positions/editorial/_description.html.erb
@@ -1,8 +1,2 @@
+<h1>description</h1>
 
-
-<form action="<%= next_page_path %>" method="post" >
-	<input type="hidden" name="track" value="editorial">
-	<input type="hidden" name="position" value="<%= @position %>">
-	<input type="hidden" name="page" value="<%= @page %>">
-	<button class="btn btn-primary">Next</button>
-</form>
