--- a/app/views/positions/editorial.html.erb
+++ b/app/views/positions/editorial.html.erb
@@ -18,7 +18,7 @@
 
 <!-- Track Navigation Bar -->
 
-<ul class="editorial-nav nav-<%= @position.pages.count %> list-inline clearfix">
+<ul class="track-nav editorial nav-<%= @position.pages.count %> list-inline clearfix">
 <% @position.pages.each do |page| %>
 	<a class="test <% if current_user.status.pages.include?(page) %> completed <% end %>" href="/editorial/<%= @position.name %>/<%= page %>">
 		<li><%= page.gsub('-',' ') %></li>
