--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,9 @@
-.completed {
-	background:black;
-}
+
 
 .track-nav {
 	border: 1px solid black;
 	padding:1px 0px;
+	text-align:center;
 }
 
 
@@ -20,13 +19,10 @@
 	text-decoration: none;
 }
 
-
 .editorial a:hover {
 	background: #99daea;
 }
 
-
-
-.nav-16 a {
-	width: 6%;
+a.completed {
+	background: #99daea;
 }
