--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,6 +12,9 @@
   <div><%= f.label :last_name %><br />
   <%= f.text_field :last_name, :autofocus => true %></div>
 
+  <div><%= f.label :phone_number %><br />
+  <%= f.text_field :phone_number, :autofocus => true %></div>
+
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
