--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript" src="//use.typekit.net/pmb1dkw.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <title>Spoon University Secret Sauce</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-default" role="navigation">
+ <div class="container">
+	<div id=""></div>
 <p><span class="notice"><%= notice %></span><span class="alert"><%= alert %></span></p>
+</div>
+</nav>
 <div class="container">
 <%= yield %>
 </div>
