--- a/app/views/positions/editorial.html.erb
+++ b/app/views/positions/editorial.html.erb
@@ -10,14 +10,18 @@ ul.nav-<%= @position.pages.count %> a {
 
 
 <ul class="track-nav editorial nav-<%= @position.pages.count %> list-inline clearfix">
+	<div>
 <% @position.pages.each do |page| %>
 	<a class="test <% if current_user.status.pages.include?(page) %> completed <% end %>" href="/editorial/<%= @position.name %>/<%= page.name %>">
 		<li><%= page.name.gsub('-',' ') %></li>
 	</a>
 <% end %>
+</div>
 </ul>
 <!-- Body -->
+<div class="track-body">
 <%= render "positions/editorial/#{@page}" %>
+</div>
 
 <form action="<%= next_page_path %>" method="post" >
 	<input type="hidden" name="track" value="editorial">
@@ -25,3 +29,4 @@ ul.nav-<%= @position.pages.count %> a {
 	<input type="hidden" name="page" value="<%= @page %>">
 	<button class="btn btn-primary">Next</button>
 </form>
+ 
