--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,20 +1,20 @@
 <% school = @school %>
 <h1><%= school.name %></h1>
 <ul>
-  <% if school.fbUrl %>
-    <li><a href="<%= school.fbUrl %>">Facebook</a></li>
+  <% if school.facebook_url %>
+    <li><a href="<%= school.facebook_url %>">Facebook</a></li>
   <% end %>
 
-  <% if school.twitterUrl %>
-    <li><a href="<%= school.twitterUrl %>">Twitter</a></li>
+  <% if school.twitter_url %>
+    <li><a href="<%= school.twitter_url %>">Twitter</a></li>
   <% end %>
 
-  <% if school.instagramUrl %>
-    <li><a href="<%= school.instagramUrl %>">Instagram</a></li>
+  <% if school.instagram_url %>
+    <li><a href="<%= school.instagram_url %>">Instagram</a></li>
   <% end %>
 
-  <% if school.spoonUrl %>
-    <li><a href="<%= school.spoonUrl %>">Spoon</a></li>
+  <% if school.spoon_url %>
+    <li><a href="<%= school.spoon_url %>">Spoon</a></li>
   <% end %>
 </ul>
 
