--- a/app/views/schools/admin.html.erb
+++ b/app/views/schools/admin.html.erb
@@ -1,26 +1,26 @@
 <div class="row school-social">
   <% @schools.each do |school|%>
     <div class="col-md-4">
-      <h1><a href="/schools/<%= school.name %>"><%= school.name %></a></h1>
+      <h1><a href="/schools/<%= school.shortname %>"><%= school.name %></a></h1>
 
       <ul>
-        <% if school.fbUrl %>
-          <li><a href="<%= school.fbUrl %>">Facebook</a></li>
+        <% if school.facebook_url %>
+          <li><a href="<%= school.facebook_url %>">Facebook</a></li>
         <% end %>
 
-        <% if school.twitterUrl %>
-          <li><a href="<%= school.twitterUrl %>">Twitter</a></li>
+        <% if school.twitter_url %>
+          <li><a href="<%= school.twitter_url %>">Twitter</a></li>
         <% end %>
 
-        <% if school.instagramUrl %>
-          <li><a href="<%= school.instagramUrl %>">Instagram</a></li>
+        <% if school.instagram_url %>
+          <li><a href="<%= school.instagram_url %>">Instagram</a></li>
         <% end %>
 
-        <% if school.spoonUrl %>
-          <li><a href="<%= school.spoonUrl %>">Spoon</a></li>
+        <% if school.spoon_url %>
+          <li><a href="<%= school.spoon_url %>">Spoon</a></li>
         <% end %>
         <% if school.users != [] %>
-          <li><%= school.users.first.first_name %></a></li>
+          <li><%= school.users.count %></a></li>
         <% end %>
       </ul>
     </div>
