active and inactive users on school page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -35,3 +35,15 @@ a.completed {
 .track-body h1 {
 	text-transform: capitalize;
 }
+
+#alum-hidden{
+	color:red;
+	/*visibility: hidden;*/
+}
+
+#alum-visible{
+	visibility: visible;
+}
+
+
+
