--- a/app/views/schools/admin.html.erb
+++ b/app/views/schools/admin.html.erb
@@ -21,7 +21,7 @@
         <% end %>
         <li>Active Users:
         <% if school.users != [] %>
-          <%= school.count_active %>
+          <%= school.active.count %>
         <% else %>
           0
         <% end %>
