added shortnames, fixing errors

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,21 @@
 body {
 	font-family: 'museo-sans-rounded';
+	padding-top: 70px;
+}
+
+.navbar {
+	padding:5px;
+}
+
+.profile {
+	text-align:center;
+}
+
+.quicklinks a {
+	clear:both;
+	position:relative;
+	float:left;
+	width: 100%;
 }
 
 .track-nav {
