--- a/app/views/positions/editorial/_tone.html.erb
+++ b/app/views/positions/editorial/_tone.html.erb
@@ -1,1 +1,10 @@
 <h1>tone</h1>
+
+Be real. Be honest. Channel Lena Dunham, not Martha Stewart.
+Spoon has a real college editorial voice (which you should be able to master, considering the fact that you’re a real college student). You’re not writing for Bon Appetit, you’re writing for your friends. If you wouldn’t write something in an email to your friends, don’t write it on Spoon.
+Look to Thrillist for voice inspiration. They kill it in the content strategy department. Check out these headlines:
+Mountain Dew Cheetos are here, but they’re only in Japan, obviously. Japan has given us Mountain Dew Cheetos, and they are reportedly just as weird as you’d think.11 reasons why breakfast tacos are better than bagels.We prove beyond a reasonable doubt that breakfast tacos are the most superior breakfast food.Everything you never wanted to know about prison food. It turns out prison food is just as gross as you expected, but there’s plenty more interesting backstory about jail cuisine that…
+Be raw but not cheesy
+Be friendly but not ditzy
+Be smart but not serious
+Be cool but not cocky
