site content added

--- a/app/views/positions/editorial/_editorial_process.html.erb
+++ b/app/views/positions/editorial/_editorial_process.html.erb
@@ -1,1 +1,39 @@
-<h1>process</h1>
+<h1>Editing Process</h1>
+
+
+Scroll to the right to learn how a story flows through the system, from ideation to publishing
+
+
+
+STEP 1
+
+A writer comes up with an amazing story idea and emails the assigned editor for approval.
+
+STEP 2
+
+Editor approves (or disapproves) idea, and writer immediately contacts their photographer to coordinate photos for the article.
+
+STEP 3
+
+Writer researches and writes the story and posts the story to WordPress. At the same time, the photographer uploads the photos to Flickr.
+
+STEP 4
+
+The writer takes the photos they want from Flickr and inserts them into their article. Sets featured image.
+
+STEP 5
+
+The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things that just don’t make sense.
+
+STEP 6
+
+The story moves on to the managing editor or editor-in-chief. They confirm that the story will be a hit, make necessary edits, and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
+
+STEP 7
+
+When the story looks good, the EIC publishes to the site and the writer promotes it on social media.
+
+
+
+
+*Throughout this process, the publishing spreadsheet will be updated.
