--- a/app/views/positions/editorial/_login.html.erb
+++ b/app/views/positions/editorial/_login.html.erb
@@ -1,1 +1,17 @@
-<h1>login</h1>
+<h1>Log In to WordPress</h1>
+
+
+We use a program called WordPress to publish all articles to the site. Once you get the hang of it, it’s super easy to use, but you gotta learn first. The following steps will only work if you’ve received an email from WordPress with your user login. If you haven’t received that email, stop right now and email Mackenzie (if you’re an EIC), or your EIC (if you’re a writer or editor) to tell them to make you an account.
+ 
+
+PUT IT INTO PRACTICE:
+<ul>
+  <ol>In a web browser, type in your school’s URL, followed by /wp-login.php</br>
+  <strong>(e.g. myschool.spoonuniversity.com/wp-login.php)</strong></ol>
+  <ol>Enter your username and password and click log in.</ol>
+</ul>
+
+
+<!-- VIDEO GOES HERE
+http://secretsauce.spoonuniversity.com/log-in/
+ -->
