content added and pages renamed

--- a/app/views/positions/editorial/_add_photos.html.erb
+++ b/app/views/positions/editorial/_add_photos.html.erb
@@ -2,12 +2,13 @@
 
 
 Every post needs photos, and since our photographers upload all their photos to flickr, we gotta know how to get them from there. Here’s how to insert your photos into WordPress from Flickr.
+
 <ol>
   <li>
     Open desired photo on Flickr
   </li>
   <li>
-    On the bottom right of the photo, click the <!-- attach image here -->
+    On the bottom right of the photo, click the <img src="/assets/editorial/51.png">
   </li>
   <li>
     Open “Grab the HTML/BCCode.” Make sure photo size is at least 770x500px, no larger than 1024px wide.
