--- a/app/views/positions/marketing.html.erb
+++ b/app/views/positions/marketing.html.erb
@@ -20,6 +20,7 @@ ul.nav-<%= @position.pages.count %> a {
 </ul>
 <!-- Body -->
 <div class="track-body">
+		<h1><%= @page.name %></h1>
 <%= render "positions/marketing/#{@page.shortname}" %>
 </div>
 
