--- a/app/views/positions/editorial/_style.html.erb
+++ b/app/views/positions/editorial/_style.html.erb
@@ -59,4 +59,12 @@
   </div>
 </div>
 
+
+
+
+<div class="track-body">
+    <%= render "positions/quiz_tr" %>
+</div>
+
+
 <!-- QUIZ ON EDITORIAL STYLE -->
