--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,6 +6,15 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
+  <div><%= f.label :first_name %><br />
+  <%= f.text_field :first_name, :autofocus => true %></div>
+
+  <div><%= f.label :last_name %><br />
+  <%= f.text_field :last_name, :autofocus => true %></div>
+
+  <div><%= f.label :phone_number %><br />
+  <%= f.text_field :phone_number, :autofocus => true %></div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
@@ -18,6 +27,12 @@
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
+
+  <% if @schools %>
+  <div><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
+  <div><%= select_tag(:position_id, options_from_collection_for_select(@positions, "id", "name") ) %></div>
+<% end %>
+
 
   <div><%= f.submit "Update" %></div>
 <% end %>
