--- a/app/views/devise/?/edit.html.erb
+++ b/app/views/devise/?/edit.html.erb
@@ -6,6 +6,12 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
+  <div><%= f.label :first_name %><br />
+  <%= f.email_field :first_name, :autofocus => true %></div>
+
+  <div><%= f.label :last_name %><br />
+  <%= f.email_field :last_name, :autofocus => true %></div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
@@ -18,6 +24,10 @@
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
+
+  <div><%= f.collection_select(:school_id, @schools, :id, :name) %></div>
+
+  <div><%= f.collection_select(:position_id, @positions, :id, :name) %></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
